--- a/rclUE.uplugin
+++ b/rclUE.uplugin
@@ -3,10 +3,10 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "rclc",
-	"Description": "rclc interface for ROS2 on UE4",
+	"Description": "rclc interface for ROS2 on UE",
 	"Category": "Robotics",
-	"CreatedBy": "Rapyuta Robotics",
-	"CreatedByURL": "https://www.rapyuta-robotics.com/",
+	"CreatedBy": "Rapyuta Robotics, Greenroom Robotics",
+	"CreatedByURL": "https://github.com/Greenroom-Robotics/rclUE",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
