feat: fix GPS/INS publisher routines.
Add experimental Proj binding (that seems to already exist within UE
already, oops)

UE4 GPS INS [sc-2980]

--- a/rclUE.uplugin
+++ b/rclUE.uplugin
@@ -21,6 +21,12 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": ["Linux"]
+		},
+		{
+			"Name": "UEProj",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": ["Linux"]
 		}
 	]
 }
