feat: improved Subscriber interface
ROS2 UE Subscriber Improvements [sc-3516]

--- a/rclUE.uplugin
+++ b/rclUE.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "rclc",
-	"Description": "rclc interface for ROS2 on UE",
+	"FriendlyName": "rclUE",
+	"Description": "ROS2 rclc interface for UE",
 	"Category": "Robotics",
 	"CreatedBy": "Rapyuta Robotics, Greenroom Robotics",
 	"CreatedByURL": "https://github.com/Greenroom-Robotics/rclUE",
@@ -12,7 +12,7 @@
 	"SupportURL": "",
 	"EnabledByDefault": true,
 	"CanContainContent": true,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": true,
 	"Modules": [
