feat: added conversions file, removed UEProj
UE AIS Sensor Simulation [sc-3219]

--- a/rclUE.uplugin
+++ b/rclUE.uplugin
@@ -21,12 +21,12 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"WhitelistPlatforms": ["Linux"]
-		},
+		}
+	],
+	"Plugins": [
 		{
-			"Name": "UEProj",
-			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"WhitelistPlatforms": ["Linux"]
+			"Name": "GeoReferencing",
+			"Enabled": true
 		}
 	]
 }
