--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Create a pull request to other versions
 
 on:
-  # pull_request:
-  push: # for test
+  pull_request:
+  # push: # for test
     branches:
       - test_action
       # - devel
