--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,22 +18,37 @@ permissions:
 
 jobs:
   create_pr:
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     strategy:
       matrix:
         version:
           - devel
           - UE5_devel_humble
+          - test_action
+    if: ${{ matrix.version }} != ${{ github.base_ref }}
     steps:
     - uses: actions/checkout@v4
       with:
         ref: ${{ matrix.version }}
-    - run: |
-        echo $GITHUB_SHA
-        env | grep GITHUB
+    - name: create branch
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
         echo The PR was merged, ${{ matrix.version }}, ${{ github.base_ref }}, $GITHUB_SHA. ${{ github.event.pull_request.user.login }}
+        git checkout -b auto_created_${{ matrix.version }}_$GITHUB_SHA
+        git cherry-pick $GITHUB_SHA
+        git push -u origin auto_created_${{ matrix.version }}_$GITHUB_SHA
+    - name: Create pull request
+      uses: repo-sync/pull-request@v2
+      with:
+        source_branch: auto_created_${{ matrix.version }}_$GITHUB_SHA
+        destination_branch: ${{ matrix.version }}
+        pr_title: auto_created_${{ matrix.version }}_$GITHUB_SHA
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
     # todo
+    # check base_ref == martrix.version
     # 1. create branch
     # 2. cherry-pick merge commit
     # 3. create PR, assign same author, assign same reviewer
