--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,13 @@ jobs:
       # if: ${{ matrix.version }} != ${{ github.base_ref }}
       with:
         ref: ${{ matrix.version }}
+    - name: Debug
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        echo ${{ matrix.version }}, ${{ github.base_ref }}, $GITHUB_SHA. ${{ github.event.pull_request.user.login }}
+        echo $GITHUB_TOKEN
+        echo ${{ secrets.GITHUB_TOKEN }}
     - name: Cherry pick and create PR
       # if: ${{ matrix.version }} != ${{ github.base_ref }}
       env:
@@ -54,6 +61,7 @@ jobs:
           cherry-pick
         reviewers: |
           ${{ github.event.pull_request.user.login }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     # - name: create branch
     #   if: ${{ matrix.version }} != ${{ github.base_ref }}
