--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,51 @@
-on: workflow_dispatch
+name: Create a pull request to other versions
+
+on:
+  pull_request:
+    branches:
+      - devel
+      - UE5_devel_humble
+    types: ["closed"]
+
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-  echo_ref:
+  create_pr:
     runs-on: ubuntu-latest
+    name: create_pr to other branchs
+    if: github.event.pull_request.merged == true
+    strategy:
+      matrix:
+        version:
+          - devel
+          - UE5_devel_humble
     steps:
-      - run: |
-          echo $GITHUB_REF
+    - name: Checkout
+      uses: actions/checkout@v4
+      if: matrix.version != github.base_ref
+      with:
+        ref: ${{ matrix.version }}
+    - name: Debug
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        echo ${{ matrix.version }}, ${{ github.base_ref }}, $GITHUB_SHA. ${{ github.event.pull_request.user.login }}
+    - name: Cherry pick and create PR
+      if: matrix.version != github.base_ref
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: carloscastrojumo/github-cherry-pick-action@v1.0.9
+      with:
+        branch: ${{ matrix.version }}
+        labels: |
+          cherry-pick
+        reviewers: |
+          ${{ github.event.pull_request.user.login }}
+        token: ${{ secrets.GITHUB_TOKEN }}
+        cherry-pick-branch: auto_created_${{ matrix.version }}_${{ github.sha }}
+        title: '[cherry-pick to ${{ matrix.version }} from ${{ github.base_ref }}] ${{ github.event.pull_request.title }}'
+        body: 'Cherry picking ${{ github.event.pull_request.title }} onto this branch'
